begin footer work

--- a/components/index.html
+++ b/components/index.html
@@ -459,6 +459,78 @@
     </div>
   </article>
 
+  <article class="component">
+    <h3 id="footer">Footer</h3>
+    <div class="component__image">
+      <img
+      srcset="screenshots/organisms/footer.png 2x"
+      src="screenshots/organisms/footer.png" 
+      alt="footer">
+    </div>
+    <div class="component__code">
+      <div class="footer-container">
+        <div class="footer-row1">
+        <img 
+        class="footer-brand__logo-image" 
+        src="../images/footer-brand__logo-image.svg"
+        alt="ACAG logo">
+        <p class="footer-brand__logo-name">Contemporary Art <br> Galleries Assoction</p>
+        </div>
+
+        <div class="footer-row2">
+        <ul class="footer__column-01">
+          <li class="footer-text__medium-gray">Art Mûr</li>
+          <li class="footer-text__medium-gray">Art45</li>
+          <li class="footer-text__medium-gray">Beaux-arts des Amériques</li>
+          <li class="footer-text__medium-gray">Blouin Division</li>
+          <li class="footer-text__medium-gray">Bradley Ertaskiran</li>
+          <li class="footer-text__medium-gray">Christie Contemporary</li>
+          <li class="footer-text__medium-gray">DURAN | MASHAAL</li>
+          <li class="footer-text__medium-gray">ELLEPHANT</li>
+          <li class="footer-text__medium-gray">Equinox Gallery</li>
+          <li class="footer-text__medium-gray">Feheley Fine Arts</li>
+          <li class="footer-text__medium-gray">Franz Kaka</li>
+        </ul>
+        <ul class="footer__column-02">
+          <li class="footer-text__medium-gray">Galerie 3</li>
+          <li class="footer-text__medium-gray">Galerie a</li>
+          <li class="footer-text__medium-gray">Galerie Bernard</li>
+          <li class="footer-text__medium-gray">Galerie C.O.A</li>
+          <li class="footer-text__medium-gray">Galerie Éric Devlin</li>
+          <li class="footer-text__medium-gray">Galerie Hugues Charbonneau</li>
+          <li class="footer-text__medium-gray">Galerie Jean-Claude Bergeron</li>
+          <li class="footer-text__medium-gray">Galerie Michel Guimont</li>
+          <li class="footer-text__medium-gray">Galerie Nicolas Robert</li>
+          <li class="footer-text__medium-gray">Galerie Robert Poulin</li>
+          <li class="footer-text__medium-gray">Galerie Robertson Arès</li>
+        </ul>
+        <ul class="footer__column-03">
+          <li class="footer-text__medium-gray">Galerie Simon Blais</li>
+          <li class="footer-text__medium-gray">Galerie Youn</li>
+          <li class="footer-text__medium-gray">Galeries Roger Bellemare et Christian Lambert</li>
+          <li class="footer-text__medium-gray">General Hardware Contemporary</li>
+          <li class="footer-text__medium-gray">Lacerte art contemporain</li>
+          <li class="footer-text__medium-gray">Laroche/Joncas</li>
+          <li class="footer-text__medium-gray">McBride Contemporain</li>
+          <li class="footer-text__medium-gray">Pangée</li>
+          <li class="footer-text__medium-gray">Patrick Mikhail</li>
+          <li class="footer-text__medium-gray">Paul Petro Contemporary Art</li>
+        </ul>
+        <ul class="footer__column-04">
+          <li class="footer-text__medium-gray">Pierre-François Ouellette art contemporain</li>
+          <li class="footer-text__medium-gray">Stephen Bulger Gallery</li>
+          <li class="footer-text__medium-gray">Studio 21 Fine Art</li>
+          <li class="footer-text__medium-gray">TrépanierBaer Gallery</li>
+          <li class="footer-text__medium-gray">United Contemporary</li>
+          <li class="footer-text__medium-gray">VIVIANEART</li>
+          <li class="footer-text__medium-gray">Yves Laroche Galerie d&#39art</li>
+          <li class="footer-text__medium-gray">Zalucky Contemporary</li>
+        </ul>
+        </div>
+      </div>
+    </div>
+  </article>
+
   </div> <!--content-->
   </div> <!--page wrapper-->
 </body>
