footer add row 2

--- a/components/index.html
+++ b/components/index.html
@@ -5,7 +5,6 @@
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Figtree:wght@400;500;600&display=swap" rel="stylesheet">
-  
   <link rel="stylesheet" href="../css/components.css">
   <link rel="stylesheet" href="normalize.css">
   <title>AGAC Components</title>
@@ -203,7 +202,6 @@
     </div> <!--component code-->
   </article>
 
-
 <!--gallery-->
 
   <h3 id="gallery-section">GALLERY SECTION</h3>
@@ -225,6 +223,7 @@
       </article>
     </div>
   </article>
+
   <article class="component">
     <h3 class="component__name" id="gallery-block__letter">Gallery Block Letter</h3>
     <div class="component__image">
@@ -245,185 +244,182 @@
     <h3 class="component__name" id="gallery-collection">Gallery Collection</h3>
     <div class="gallery-collection"></div>
     <div class="component__image">
-      <img id="gallery"
-      srcset="screenshots/organisms/gallery.png 1.7x"
-      src="screenshots/organisms/gallery.png"
-      alt="gallery collection">
-    </div>
-
+        <img id="gallery"
+        srcset="screenshots/organisms/gallery.png 1.7x"
+        src="screenshots/organisms/gallery.png"
+        alt="gallery collection">
+      </div>
     <div class="component__code">
       <div class="gallery">
-
-      <div class="gallery-block__letter">
+        <div class="gallery-block__letter">
         <img class="gallery-block__letter" 
         src="../images/gallery-block__letter-a.png" 
         alt="the letter A">
-      </div>
+        </div>
 
-      <article class="gallery-block">
+        <div class="gallery-block">
         <h4>Gallery Name</h4>
         <h5>Location</h5>
         <img class="gallery-block__image" 
         src="screenshots/atoms/gallery-block__image.png" 
         alt="gallery block">
-      </article>
+        </div>
 
-      <article class="gallery-block">
+        <div class="gallery-block">
         <h4>Gallery Name</h4>
         <h5>Location</h5>
         <img class="gallery-block__image" 
         src="screenshots/atoms/gallery-block__image.png" 
         alt="gallery block">
-      </article>
+        </div>
 
-      <div class="gallery-block__letter">
+        <div class="gallery-block__letter">
         <img class="gallery-block__letter" 
         src="../images/gallery-block__letter-g.png" 
         alt="the letter G">
+        </div>
+
+        <p class="gallery-text">The Contemporary Art Galleries Association (AGAC) is a non-profit organization that brings together galleries across Canada. AGAC defends the moral and economic interests of its members and ensures the recognition and prosperity of the market for contemporary art in Canada.</p>
+
+        <div class="gallery-block">
+        <h4>Gallery Name</h4>
+        <h5>Location</h5>
+        <img class="gallery-block__image" 
+        src="screenshots/atoms/gallery-block__image.png" 
+        alt="gallery block">
+        </div>
+
+        <div class="gallery-block">
+          <h4>Gallery Name</h4>
+          <h5>Location</h5>
+          <img class="gallery-block__image" 
+          src="screenshots/atoms/gallery-block__image.png" 
+          alt="gallery block">
+        </div>
+
+        <div class="gallery-block">
+          <h4>Gallery Name</h4>
+          <h5>Location</h5>
+          <img class="gallery-block__image" 
+          src="screenshots/atoms/gallery-block__image.png" 
+          alt="gallery block">
+        </div>
+
+        <div class="gallery-block">
+          <h4>Gallery Name</h4>
+          <h5>Location</h5>
+          <img class="gallery-block__image" 
+          src="screenshots/atoms/gallery-block__image.png" 
+          alt="gallery block">
+        </div>
+
+        <div class="gallery-block__letter">
+          <img class="gallery-block__letter" 
+          src="../images/gallery-block__letter-a.png" 
+          alt="the letter A">
+        </div>
+
+        <div class="gallery-block">
+          <h4>Gallery Name</h4>
+          <h5>Location</h5>
+          <img class="gallery-block__image" 
+          src="screenshots/atoms/gallery-block__image.png" 
+          alt="gallery block">
+        </div>
+
+        <div class="gallery-block__letter">
+          <img class="gallery-block__letter" 
+          src="../images/gallery-block__letter-c.png" 
+          alt="the letter C">
+        </div>
+
+        <div class="gallery-block">
+          <h4>Gallery Name</h4>
+          <h5>Location</h5>
+          <img class="gallery-block__image" 
+          src="screenshots/atoms/gallery-block__image.png" 
+          alt="gallery block">
+        </div>
+
+        <div class="gallery-block">
+          <h4>Gallery Name</h4>
+          <h5>Location</h5>
+          <img class="gallery-block__image" 
+          src="screenshots/atoms/gallery-block__image.png" 
+          alt="gallery block">
+        </div>
+
+        <div class="gallery-block">
+          <h4>Gallery Name</h4>
+          <h5>Location</h5>
+          <img class="gallery-block__image" 
+          src="screenshots/atoms/gallery-block__image.png" 
+          alt="gallery block">
+        </div>
+
+        <div class="gallery-block">
+          <h4>Gallery Name</h4>
+          <h5>Location</h5>
+          <img class="gallery-block__image" 
+          src="screenshots/atoms/gallery-block__image.png" 
+          alt="gallery block">
+        </div>
+
+        <div class="gallery-block__letter">
+          <img class="gallery-block__letter" 
+          src="../images/gallery-block__letter-amp.png" 
+          alt="ampersand">
+        </div>
+
+        <div class="gallery-block">
+          <h4>Gallery Name</h4>
+          <h5>Location</h5>
+          <img class="gallery-block__image" 
+          src="screenshots/atoms/gallery-block__image.png" 
+          alt="gallery block">
+        </div>
+
+        <div class="gallery-block">
+          <h4>Gallery Name</h4>
+          <h5>Location</h5>
+          <img class="gallery-block__image" 
+          src="screenshots/atoms/gallery-block__image.png" 
+          alt="gallery block">
+        </div>
+
+        <div class="gallery-block">
+          <h4>Gallery Name</h4>
+          <h5>Location</h5>
+          <img class="gallery-block__image" 
+          src="screenshots/atoms/gallery-block__image.png" 
+          alt="gallery block">
+        </div>
+
+        <div class="gallery-block">
+          <h4>Gallery Name</h4>
+          <h5>Location</h5>
+          <img class="gallery-block__image" 
+          src="screenshots/atoms/gallery-block__image.png" 
+          alt="gallery block">
+        </div>
+
+        <div class="gallery-block">
+          <h4>Gallery Name</h4>
+          <h5>Location</h5>
+          <img class="gallery-block__image" 
+          src="screenshots/atoms/gallery-block__image.png" 
+          alt="gallery block">
+        </div>
+
+        <div class="gallery-block">
+          <h4>Gallery Name</h4>
+          <h5>Location</h5>
+          <img class="gallery-block__image" 
+          src="screenshots/atoms/gallery-block__image.png" 
+          alt="gallery block">
+        </div>
+        
       </div>
-
-      <p class="gallery-text">The Contemporary Art Galleries Association (AGAC) is a non-profit organization that brings together galleries across Canada. AGAC defends the moral and economic interests of its members and ensures the recognition and prosperity of the market for contemporary art in Canada.</p>
-
-      <article class="gallery-block">
-        <h4>Gallery Name</h4>
-        <h5>Location</h5>
-        <img class="gallery-block__image" 
-        src="screenshots/atoms/gallery-block__image.png" 
-        alt="gallery block">
-      </article>
-
-      <article class="gallery-block">
-        <h4>Gallery Name</h4>
-        <h5>Location</h5>
-        <img class="gallery-block__image" 
-        src="screenshots/atoms/gallery-block__image.png" 
-        alt="gallery block">
-      </article>
-
-      <article class="gallery-block">
-        <h4>Gallery Name</h4>
-        <h5>Location</h5>
-        <img class="gallery-block__image" 
-        src="screenshots/atoms/gallery-block__image.png" 
-        alt="gallery block">
-      </article>
-
-      <article class="gallery-block">
-        <h4>Gallery Name</h4>
-        <h5>Location</h5>
-        <img class="gallery-block__image" 
-        src="screenshots/atoms/gallery-block__image.png" 
-        alt="gallery block">
-      </article>
-
-      <div class="gallery-block__letter">
-        <img class="gallery-block__letter" 
-        src="../images/gallery-block__letter-a.png" 
-        alt="the letter A">
-      </div>
-
-      <article class="gallery-block">
-        <h4>Gallery Name</h4>
-        <h5>Location</h5>
-        <img class="gallery-block__image" 
-        src="screenshots/atoms/gallery-block__image.png" 
-        alt="gallery block">
-      </article>
-
-      <div class="gallery-block__letter">
-        <img class="gallery-block__letter" 
-        src="../images/gallery-block__letter-c.png" 
-        alt="the letter C">
-      </div>
-
-      <article class="gallery-block">
-        <h4>Gallery Name</h4>
-        <h5>Location</h5>
-        <img class="gallery-block__image" 
-        src="screenshots/atoms/gallery-block__image.png" 
-        alt="gallery block">
-      </article>
-
-      <article class="gallery-block">
-        <h4>Gallery Name</h4>
-        <h5>Location</h5>
-        <img class="gallery-block__image" 
-        src="screenshots/atoms/gallery-block__image.png" 
-        alt="gallery block">
-      </article>
-
-      <article class="gallery-block">
-        <h4>Gallery Name</h4>
-        <h5>Location</h5>
-        <img class="gallery-block__image" 
-        src="screenshots/atoms/gallery-block__image.png" 
-        alt="gallery block">
-      </article>
-
-      <article class="gallery-block">
-        <h4>Gallery Name</h4>
-        <h5>Location</h5>
-        <img class="gallery-block__image" 
-        src="screenshots/atoms/gallery-block__image.png" 
-        alt="gallery block">
-      </article>
-
-      <div class="gallery-block__letter">
-        <img class="gallery-block__letter" 
-        src="../images/gallery-block__letter-amp.png" 
-        alt="ampersand">
-      </div>
-
-      <article class="gallery-block">
-        <h4>Gallery Name</h4>
-        <h5>Location</h5>
-        <img class="gallery-block__image" 
-        src="screenshots/atoms/gallery-block__image.png" 
-        alt="gallery block">
-      </article>
-
-      <article class="gallery-block">
-        <h4>Gallery Name</h4>
-        <h5>Location</h5>
-        <img class="gallery-block__image" 
-        src="screenshots/atoms/gallery-block__image.png" 
-        alt="gallery block">
-      </article>
-
-      <article class="gallery-block">
-        <h4>Gallery Name</h4>
-        <h5>Location</h5>
-        <img class="gallery-block__image" 
-        src="screenshots/atoms/gallery-block__image.png" 
-        alt="gallery block">
-      </article>
-
-      <article class="gallery-block">
-        <h4>Gallery Name</h4>
-        <h5>Location</h5>
-        <img class="gallery-block__image" 
-        src="screenshots/atoms/gallery-block__image.png" 
-        alt="gallery block">
-      </article>
-
-      <article class="gallery-block">
-        <h4>Gallery Name</h4>
-        <h5>Location</h5>
-        <img class="gallery-block__image" 
-        src="screenshots/atoms/gallery-block__image.png" 
-        alt="gallery block">
-      </article>
-
-      <article class="gallery-block">
-        <h4>Gallery Name</h4>
-        <h5>Location</h5>
-        <img class="gallery-block__image" 
-        src="screenshots/atoms/gallery-block__image.png" 
-        alt="gallery block">
-      </article>
-
-      </div>
-
     </div>
   </article>
 
@@ -470,62 +466,69 @@
     <div class="component__code">
       <div class="footer-container">
         <div class="footer-row1">
-        <img 
-        class="footer-brand__logo-image" 
-        src="../images/footer-brand__logo-image.svg"
-        alt="ACAG logo">
-        <p class="footer-brand__logo-name">Contemporary Art <br> Galleries Assoction</p>
+          <img 
+          class="footer-brand__logo-image" 
+          src="../images/footer-brand__logo-image.svg"
+          alt="ACAG logo">
+          <p class="footer-brand__logo-name">Contemporary Art <br> Galleries Assoction</p>
         </div>
 
         <div class="footer-row2">
-        <ul class="footer__column-01">
-          <li class="footer-text__medium-gray">Art Mûr</li>
-          <li class="footer-text__medium-gray">Art45</li>
-          <li class="footer-text__medium-gray">Beaux-arts des Amériques</li>
-          <li class="footer-text__medium-gray">Blouin Division</li>
-          <li class="footer-text__medium-gray">Bradley Ertaskiran</li>
-          <li class="footer-text__medium-gray">Christie Contemporary</li>
-          <li class="footer-text__medium-gray">DURAN | MASHAAL</li>
-          <li class="footer-text__medium-gray">ELLEPHANT</li>
-          <li class="footer-text__medium-gray">Equinox Gallery</li>
-          <li class="footer-text__medium-gray">Feheley Fine Arts</li>
-          <li class="footer-text__medium-gray">Franz Kaka</li>
-        </ul>
-        <ul class="footer__column-02">
-          <li class="footer-text__medium-gray">Galerie 3</li>
-          <li class="footer-text__medium-gray">Galerie a</li>
-          <li class="footer-text__medium-gray">Galerie Bernard</li>
-          <li class="footer-text__medium-gray">Galerie C.O.A</li>
-          <li class="footer-text__medium-gray">Galerie Éric Devlin</li>
-          <li class="footer-text__medium-gray">Galerie Hugues Charbonneau</li>
-          <li class="footer-text__medium-gray">Galerie Jean-Claude Bergeron</li>
-          <li class="footer-text__medium-gray">Galerie Michel Guimont</li>
-          <li class="footer-text__medium-gray">Galerie Nicolas Robert</li>
-          <li class="footer-text__medium-gray">Galerie Robert Poulin</li>
-          <li class="footer-text__medium-gray">Galerie Robertson Arès</li>
-        </ul>
-        <ul class="footer__column-03">
-          <li class="footer-text__medium-gray">Galerie Simon Blais</li>
-          <li class="footer-text__medium-gray">Galerie Youn</li>
-          <li class="footer-text__medium-gray">Galeries Roger Bellemare et Christian Lambert</li>
-          <li class="footer-text__medium-gray">General Hardware Contemporary</li>
-          <li class="footer-text__medium-gray">Lacerte art contemporain</li>
-          <li class="footer-text__medium-gray">Laroche/Joncas</li>
-          <li class="footer-text__medium-gray">McBride Contemporain</li>
-          <li class="footer-text__medium-gray">Pangée</li>
-          <li class="footer-text__medium-gray">Patrick Mikhail</li>
-          <li class="footer-text__medium-gray">Paul Petro Contemporary Art</li>
-        </ul>
-        <ul class="footer__column-04">
-          <li class="footer-text__medium-gray">Pierre-François Ouellette art contemporain</li>
-          <li class="footer-text__medium-gray">Stephen Bulger Gallery</li>
-          <li class="footer-text__medium-gray">Studio 21 Fine Art</li>
-          <li class="footer-text__medium-gray">TrépanierBaer Gallery</li>
-          <li class="footer-text__medium-gray">United Contemporary</li>
-          <li class="footer-text__medium-gray">VIVIANEART</li>
-          <li class="footer-text__medium-gray">Yves Laroche Galerie d&#39art</li>
-          <li class="footer-text__medium-gray">Zalucky Contemporary</li>
-        </ul>
+          <div class="footer__column-01">
+            <ul class="footer-text__medium-gray">
+              <li>Art Mûr</li>
+              <li>Art45</li>
+              <li>Beaux-arts des Amériques</li>
+              <li>Blouin Division</li>
+              <li>Bradley Ertaskiran</li>
+              <li>Christie Contemporary</li>
+              <li>DURAN | MASHAAL</li>
+              <li>ELLEPHANT</li>
+              <li>Equinox Gallery</li>
+              <li>Feheley Fine Arts</li>
+              <li>Franz Kaka</li>
+            </ul>
+            <ul class="footer-text__medium-gray">
+              <li>Galerie 3</li>
+              <li>Galerie a</li>
+              <li>Galerie Bernard</li>
+              <li>Galerie C.O.A</li>
+              <li>Galerie Éric Devlin</li>
+              <li>Galerie Hugues Charbonneau</li>
+              <li>Galerie Jean-Claude Bergeron</li>
+              <li>Galerie Michel Guimont</li>
+              <li>Galerie Nicolas Robert</li>
+              <li>Galerie Robert Poulin</li>
+              <li>Galerie Robertson Arès</li>
+            </ul>
+            <ul class="footer-text__medium-gray">
+              <li>Galerie Simon Blais</li>
+              <li>Galerie Youn</li>
+              <li>Galeries Roger Bellemare et Christian Lambert</li>
+              <li>General Hardware Contemporary</li>
+              <li>Lacerte art contemporain</li>
+              <li>Laroche/Joncas</li>
+              <li>McBride Contemporain</li>
+              <li>Pangée</li>
+              <li>Patrick Mikhail</li>
+              <li>Paul Petro Contemporary Art</li>
+            </ul>
+            <ul class="footer-text__medium-gray">
+              <li>Pierre-François Ouellette art contemporain</li>
+              <li>Stephen Bulger Gallery</li>
+              <li>Studio 21 Fine Art</li>
+              <li>TrépanierBaer Gallery</li>
+              <li>United Contemporary</li>
+              <li>VIVIANEART</li>
+              <li>Yves Laroche Galerie d&#39art</li>
+              <li>Zalucky Contemporary</li>
+            </ul>
+          </div>
+
+          <div class="footer__column-02">
+              <p class="footer-text__black">Subscribe to our newsletter</p>
+          </div>
+
         </div>
       </div>
     </div>
