--- a/css/components.css
+++ b/css/components.css
@@ -257,13 +257,6 @@ footer
 .footer-row1 {
   display: flex;
   justify-content: flex-start;
-  border-bottom: 1px solid var(--medium-grey);
-}
-
-.footer-row2 {
-  display: grid;
-  grid-gap: 15px;
-  grid-template-columns: 1fr 1fr 1fr 1fr 1fr 1fr;
 }
 
 .footer-brand__logo-image{
@@ -275,29 +268,26 @@ footer
   line-height: 17px;
 }
 
-.footer__hr-list {
-  grid-column: 1/7;
-  grid-row: 2;
+.footer-row2 {
+  display: grid;
+  grid-gap: 15px;
+  min-height: 400px;
+  max-height: 600px;
+  grid-template-columns: 66% 33%;
 }
 
 .footer__column-01 {
   grid-column: 1;
   padding: 0;
+  border-top: 1px solid var(--medium-grey);
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr 1fr;
 }
 
-.footer__column-02 {
+.footer-row2 .footer__column-02 {
   grid-column: 2;
   padding: 0;
-}
-
-.footer__column-03 {
-  grid-column: 3;
-  padding: 0;
-}
-
-.footer__column-04 {
-  grid-column: 4;
-  padding: 0;
+  border-top: 1px solid var(--medium-grey);
 }
 
 .footer-text__black {
@@ -310,6 +300,7 @@ footer
   line-height: 15px;
   color: var(--medium-grey);
   list-style: none;
+  padding: 0;
 
 }
 .footer-text__copyright-credit {
